--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,35 +1,41 @@
 {% set name = "peewee" %}
-{% set version = "3.15.4" %}
+{% set version = "3.18.2" %}
 
 package:
   name: {{ name }}
   version: {{ version }}
 
 source:
-  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 2581520c8dfbacd9d580c2719ae259f0637a9e46eda47dfc0ce01864c6366205
+  - url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  - sha256: 77a54263eb61aff2ea72f63d2eeb91b140c25c1884148e28e4c0f7c4f64996a0
+  - url: https://github.com/coleifer/{{ name }}/archive/refs/tags/{{ version }}.tar.gz
+    sha256: 20f5ca85d46f0c251cba5ab6f734b09e89ea77af56ad66708225bc7d4331f4c7
+    folder: gh
 
 build:
   number: 0
-  script: {{ PYTHON }} -m pip install . -vv
-
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
   build:
-    - python                                 # [build_platform != target_platform]
-    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - cython                                 # [build_platform != target_platform]
+    - python
     - {{ compiler('c') }}
+    # - {{ stdlib('c') }}
   host:
     - python
     - pip
-    - cython >=0.22.1
-    - msinttypes  # [win]
+    - cython
+    # - msinttypes  # [win]
     - sqlite
+    - setuptools
+    - wheel
   run:
     - python
 
 test:
+  source_files:
+    - gh/tests
+    - gh/runtests.py
   imports:
     - playhouse
     - peewee
@@ -37,15 +43,21 @@ test:
     - pip
   commands:
     - pip check
+    - python -c "from importlib.metadata import version; assert(version('{{ name }}')=='{{ version }}')"
+    # Remove tests/sqlite.py to fix test scope -> peewee.OperationalError: no such module: FTS4
+    - rm gh/tests/sqlite.py  # [unix]
+    - del gh/tests/sqlite.py  # [win]
+    - python gh/runtests.py
 
 about:
-  home: https://github.com/coleifer/peewee/
+  home: https://github.com/coleifer/peewee
   license: MIT
   license_family: MIT
   license_file: LICENSE
-  summary: A little ORM
-  dev_url: https://github.com/coleifer/peewee/
-  doc_url: http://docs.peewee-orm.com/en/latest/
+  summary: Peewee is a simple and small ORM.
+  description: Peewee is a simple and small ORM. It has few (but expressive) concepts, making it easy to learn and intuitive to use.
+  dev_url: https://github.com/coleifer/peewee
+  doc_url: http://docs.peewee-orm.com/en/latest
 
 extra:
   recipe-maintainers:
